--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,18 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <!-- bootstrap css -->
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+
     <title>React App</title>
   </head>
   <body>
